[gd_scene load_steps=37 format=3 uid="uid://c3yq52ykn4pqb"]

[ext_resource type="Script" uid="uid://bwbupkvhbhibw" path="res://scripts/game/CombatManager.gd" id="1_7mycd"]
[ext_resource type="Texture2D" uid="uid://cbvca7xy16311" path="res://assets/textures/floor.png" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://dtjbnhtxe5a88" path="res://scripts/game/templates/CharacterTemplate.gd" id="2_272bh"]
[ext_resource type="Script" uid="uid://bn3kywdjpfoip" path="res://scripts/game/templates/AttackPresetTemplate.gd" id="3_5vw27"]
[ext_resource type="PackedScene" uid="uid://ud35f84weq0h" path="res://assets/prefabs/Character.tscn" id="4_lquwl"]
[ext_resource type="Script" uid="uid://b5vj3chwffbdo" path="res://scripts/game/templates/EnnemyTemplate.gd" id="5_7mycd"]
[ext_resource type="Script" uid="uid://cuqg5qj3wkros" path="res://scripts/game/ai/BaseCondition.gd" id="5_272bh"]
[ext_resource type="PackedScene" uid="uid://p1au3kdybbb4" path="res://assets/prefabs/EnnemyCharacter.tscn" id="7_5vw27"]
[ext_resource type="Script" uid="uid://bcwohf288tnji" path="res://scripts/game/ai/conditions/AlliesHealthCondition.gd" id="7_kek77"]
[ext_resource type="Script" uid="uid://tlhfbetejmb5" path="res://scripts/game/ai/targets/RandomAllyTarget.gd" id="8_dg77c"]
[ext_resource type="Script" uid="uid://bv73mg5dpg82i" path="res://scripts/game/ai/conditions/ElseCondition.gd" id="9_ycdy4"]
[ext_resource type="Script" uid="uid://b6kpptlb8uikc" path="res://scripts/game/ai/targets/RandomEnnemyTarget.gd" id="10_w48qg"]

[sub_resource type="Resource" id="Resource_lquwl"]
script = ExtResource("3_5vw27")
attack_name = "Charge"
attack_style = 0
target_type = 0
is_multi_target = false
damage = 50
cooldown = 3.0
metadata/_custom_type_script = "uid://bn3kywdjpfoip"

[sub_resource type="Resource" id="Resource_kek77"]
script = ExtResource("3_5vw27")
attack_name = "Stomp"
attack_style = 2
target_type = 0
is_multi_target = true
damage = 25
cooldown = 5.0
metadata/_custom_type_script = "uid://bn3kywdjpfoip"

[sub_resource type="Resource" id="Resource_4c57u"]
script = ExtResource("3_5vw27")
attack_name = "Fireball"
attack_style = 1
target_type = 0
is_multi_target = false
damage = 100
cooldown = 4.0
metadata/_custom_type_script = "uid://bn3kywdjpfoip"

[sub_resource type="Resource" id="Resource_7mycd"]
script = ExtResource("2_272bh")
character_name = "Maxwell"
max_health = 1000
attack_presets = Array[ExtResource("3_5vw27")]([SubResource("Resource_lquwl"), SubResource("Resource_kek77"), SubResource("Resource_4c57u")])
prefab = ExtResource("4_lquwl")
model = 2
metadata/_custom_type_script = "uid://dtjbnhtxe5a88"

[sub_resource type="Resource" id="Resource_efxa6"]
script = ExtResource("3_5vw27")
attack_name = "Charge"
attack_style = 0
target_type = 0
is_multi_target = false
damage = 50
cooldown = 3.0
metadata/_custom_type_script = "uid://bn3kywdjpfoip"

[sub_resource type="Resource" id="Resource_dg77c"]
script = ExtResource("3_5vw27")
attack_name = "Stomp"
attack_style = 2
target_type = 0
is_multi_target = true
damage = 25
cooldown = 5.0
metadata/_custom_type_script = "uid://bn3kywdjpfoip"

[sub_resource type="Resource" id="Resource_ycdy4"]
script = ExtResource("3_5vw27")
attack_name = "Heal"
attack_style = 3
target_type = 1
is_multi_target = false
damage = 100
cooldown = 4.0
metadata/_custom_type_script = "uid://bn3kywdjpfoip"

[sub_resource type="Resource" id="Resource_272bh"]
script = ExtResource("2_272bh")
character_name = "Oiiaiiooo"
max_health = 1200
attack_presets = Array[ExtResource("3_5vw27")]([SubResource("Resource_efxa6"), SubResource("Resource_dg77c"), SubResource("Resource_ycdy4")])
prefab = ExtResource("4_lquwl")
model = 4
metadata/_custom_type_script = "uid://dtjbnhtxe5a88"

[sub_resource type="Resource" id="Resource_074og"]
script = ExtResource("3_5vw27")
attack_name = "Heal"
attack_style = 3
target_type = 1
is_multi_target = false
damage = 100
cooldown = 3.0
metadata/_custom_type_script = "uid://bn3kywdjpfoip"

[sub_resource type="Resource" id="Resource_cegan"]
script = ExtResource("3_5vw27")
attack_name = "Heal++"
attack_style = 4
target_type = 1
is_multi_target = true
damage = 50
cooldown = 4.0
metadata/_custom_type_script = "uid://bn3kywdjpfoip"

[sub_resource type="Resource" id="Resource_82xsv"]
script = ExtResource("3_5vw27")
attack_name = "Rez"
attack_style = 5
target_type = 1
is_multi_target = false
damage = 250
cooldown = 6.0
metadata/_custom_type_script = "uid://bn3kywdjpfoip"

[sub_resource type="Resource" id="Resource_5vw27"]
script = ExtResource("2_272bh")
character_name = "Engineer"
max_health = 800
attack_presets = Array[ExtResource("3_5vw27")]([SubResource("Resource_074og"), SubResource("Resource_cegan"), SubResource("Resource_82xsv")])
prefab = ExtResource("4_lquwl")
model = 7
metadata/_custom_type_script = "uid://dtjbnhtxe5a88"

[sub_resource type="Resource" id="Resource_ryguw"]
script = ExtResource("3_5vw27")
attack_name = "Heal"
attack_style = 3
target_type = 0
is_multi_target = false
damage = 100
cooldown = 5.0
metadata/_custom_type_script = "uid://bn3kywdjpfoip"

[sub_resource type="Resource" id="Resource_d13ii"]
script = ExtResource("8_dg77c")
include_self = false
metadata/_custom_type_script = "uid://tlhfbetejmb5"

[sub_resource type="Resource" id="Resource_getpj"]
script = ExtResource("7_kek77")
number_of_allies = 1
percentage_of_health = 50
comparator = 1
target = SubResource("Resource_d13ii")
attack = SubResource("Resource_ryguw")
metadata/_custom_type_script = "uid://bcwohf288tnji"

[sub_resource type="Resource" id="Resource_1u8w0"]
script = ExtResource("3_5vw27")
attack_name = "Charge"
attack_style = 0
target_type = 0
is_multi_target = false
damage = 10
cooldown = 4.0
metadata/_custom_type_script = "uid://bn3kywdjpfoip"

[sub_resource type="Resource" id="Resource_0odxb"]
script = ExtResource("10_w48qg")
include_self = false
metadata/_custom_type_script = "uid://b6kpptlb8uikc"

[sub_resource type="Resource" id="Resource_lswn8"]
script = ExtResource("9_ycdy4")
target = SubResource("Resource_0odxb")
attack = SubResource("Resource_1u8w0")
metadata/_custom_type_script = "uid://bv73mg5dpg82i"

[sub_resource type="Resource" id="Resource_w48qg"]
script = ExtResource("5_7mycd")
AI_gambits = Array[ExtResource("5_272bh")]([SubResource("Resource_getpj"), SubResource("Resource_lswn8")])
character_name = "Doge"
max_health = 1000
attack_presets = Array[ExtResource("3_5vw27")]([])
prefab = ExtResource("7_5vw27")
model = 0
metadata/_custom_type_script = "uid://b5vj3chwffbdo"

[sub_resource type="Resource" id="Resource_vivmo"]
script = ExtResource("5_7mycd")
AI_gambits = Array[ExtResource("5_272bh")]([])
character_name = "Cirno"
max_health = 1000
attack_presets = Array[ExtResource("3_5vw27")]([])
prefab = ExtResource("7_5vw27")
model = 5
metadata/_custom_type_script = "uid://b5vj3chwffbdo"

[sub_resource type="Resource" id="Resource_2cqfq"]
script = ExtResource("5_7mycd")
AI_gambits = Array[ExtResource("5_272bh")]([])
character_name = "Cheems"
max_health = 1000
attack_presets = Array[ExtResource("3_5vw27")]([])
prefab = ExtResource("7_5vw27")
model = 1
metadata/_custom_type_script = "uid://b5vj3chwffbdo"

[sub_resource type="Resource" id="Resource_yaehf"]
script = ExtResource("5_7mycd")
AI_gambits = Array[ExtResource("5_272bh")]([])
character_name = "Obama"
max_health = 1000
attack_presets = Array[ExtResource("3_5vw27")]([])
prefab = ExtResource("7_5vw27")
model = 3
metadata/_custom_type_script = "uid://b5vj3chwffbdo"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0xm2m"]
albedo_texture = ExtResource("1_ig7tw")
uv1_scale = Vector3(4, 8, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_h2yge"]
material = SubResource("StandardMaterial3D_0xm2m")

[node name="Root" type="Node3D"]

[node name="CombatManager" type="Node3D" parent="." node_paths=PackedStringArray("character_menu_container", "ennemy_menu_container")]
script = ExtResource("1_7mycd")
ally_templates = Array[ExtResource("2_272bh")]([SubResource("Resource_7mycd"), SubResource("Resource_272bh"), SubResource("Resource_5vw27")])
ennemy_templates = Array[ExtResource("5_7mycd")]([SubResource("Resource_w48qg"), SubResource("Resource_vivmo"), SubResource("Resource_2cqfq"), SubResource("Resource_yaehf")])
character_menu_container = NodePath("../Control/PanelContainer/MarginContainer/HBoxContainer/CharacterHBox")
ennemy_menu_container = NodePath("../Control/PanelContainer/MarginContainer/HBoxContainer/EnnemiesContainer")
metadata/_custom_type_script = "uid://bwbupkvhbhibw"

[node name="AllySpawnPoint1" type="Node3D" parent="CombatManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1.25, 8)

[node name="AllySpawnPoint2" type="Node3D" parent="CombatManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1.25, 8)

[node name="AllySpawnPoint3" type="Node3D" parent="CombatManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.25, 8)

[node name="AllySpawnPoint4" type="Node3D" parent="CombatManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.25, 8)

[node name="EnnemySpawnPoint1" type="Node3D" parent="CombatManager"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 6.04793, 1.25, -6.31359)

[node name="EnnemySpawnPoint2" type="Node3D" parent="CombatManager"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.96422, 1.25, -6.31359)

[node name="EnnemySpawnPoint3" type="Node3D" parent="CombatManager"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.70022, 1.25, -6.31359)

[node name="EnnemySpawnPoint4" type="Node3D" parent="CombatManager"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -6.00547, 1.25, -6.31359)

[node name="EnnemySpawnPoint5" type="Node3D" parent="CombatManager"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -6.00547, 1.25, -10.2099)

[node name="EnnemySpawnPoint6" type="Node3D" parent="CombatManager"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.90824, 1.25, -10.2099)

[node name="EnnemySpawnPoint7" type="Node3D" parent="CombatManager"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.03003, 1.25, -10.2099)

[node name="EnnemySpawnPoint8" type="Node3D" parent="CombatManager"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 6.03864, 1.25, -10.2099)

[node name="floor" type="MeshInstance3D" parent="."]
transform = Transform3D(8, 0, 0, 0, 1, 0, 0, 0, 16, 0, 0, 0)
mesh = SubResource("PlaneMesh_h2yge")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.773509, -0.352489, 0.526722, 9.8996e-08, 0.831072, 0.556165, -0.633786, -0.430198, 0.642842, 11.873, 6.6364, 13.6087)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.68381, -0.434101, 0.586482, 3.82111e-08, 0.803774, 0.594935, -0.729661, -0.406822, 0.549627, -11.9313, 4.24136, 0)
shadow_enabled = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CharacterHBox" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="EnnemiesContainer" type="GridContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
columns = 2
